--- a/etc/test.yml
+++ b/etc/test.yml
@@ -107,6 +107,14 @@ agentsServiceConfiguration:
     04096aab0e3741009a18ddc87efaf8c2:
       tink:
         redirectUrl: https://127.0.0.1:7357/api/v1/thirdparty/callback
+    3977d806bef611eb85290242ac130003:
+      tink:
+        clusterId: oxford-preprod
+        redirectUrl: https://127.0.0.1:7357/api/v1/thirdparty/callback
+    f76b2c92bef511eb85290242ac130003:
+      tink:
+        clusterId: oxford-preprod
+        redirectUrl: https://127.0.0.1:7357/api/v1/thirdparty/callback
     0427f78acd1a4cda8a06c29b83e932af:
       tink:
         redirectUrl: https://127.0.0.1:7357/api/v1/thirdparty/callback
