feat(aggregation-service): Added support for certainDate approach

--- a/src/integration/lib/src/main/java/se/tink/backend/aggregation/nxgen/controllers/refresh/BUILD
+++ b/src/integration/lib/src/main/java/se/tink/backend/aggregation/nxgen/controllers/refresh/BUILD
@@ -8,6 +8,7 @@ java_library(
         "//src/integration/enums",
         "//src/integration/identity_data",
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/agents",
+        "//src/integration/lib/src/main/java/se/tink/backend/aggregation/configuration/agentsservice",
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/nxgen",
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/nxgen/agents/componentproviders",
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/nxgen/controllers/metrics",
