--- a/.charts/tink-backend-aggregation-agents/templates/be/alerts.yaml
+++ b/.charts/tink-backend-aggregation-agents/templates/be/alerts.yaml
@@ -10,11 +10,11 @@ spec:
     # All errors alerts
     #-------------------------------------------------------------------------------------------------------------------
     # Authentication alerts
-    - alert: AuthenticationErrorRateOver80%BE
+    - alert: AuthenticationErrorRateOver90%BE
       expr: |
-        # Failed logins over 80%
-        (count(sum_over_time(tink_agent_login_total{action="login", outcome="completed", market="BE", provider_type!="test"}[1h])) by (className,provider)
-            / count(sum_over_time(tink_agent_login_total{action="login", market="BE", provider_type!="test"}[1h])) by (className,provider) < 0.2)
+        # Failed logins over 90%
+        (count(sum_over_time(tink_agent_login_total{action="login", {{ .Values.allErrorsAuth }}, market="BE", provider_type!="test"}[1h])) by (className,provider)
+            / count(sum_over_time(tink_agent_login_total{action="login", market="BE", provider_type!="test"}[1h])) by (className,provider) > 0.9)
         # At least this many attempts.
             and count(sum_over_time(tink_agent_login_total{action="login", market="BE", provider_type!="test"}[1h])) by (className,provider) > 3
       for: 15m
@@ -25,15 +25,15 @@ spec:
       annotations:
         description: {{ .Values.kibanaLink }}
           {{ .Values.grafanaLink }}
-        summary: Authentication failures is over 80% (<{ $value }>) for <{ $labels.className }> (<{ $labels.provider }>) for the last 1h
+        summary: Authentication failures is over 90% (<{ $value }>) for <{ $labels.className }> (<{ $labels.provider }>) for the last 1h
           the last hour.
         tags: {{ .Values.tags }}
 
     - alert: LongTermAuthenticationErrorRateOver90%BE
       expr: |
         # Failed logins over 90%
-        (count(sum_over_time(tink_agent_login_total{action="login", outcome="completed", market="BE", provider_type!="test"}[12h])) by (className,provider)
-            / count(sum_over_time(tink_agent_login_total{action="login", market="BE", provider_type!="test"}[12h])) by (className,provider) < 0.1)
+        (count(sum_over_time(tink_agent_login_total{action="login", {{ .Values.allErrorsAuth }}, market="BE", provider_type!="test"}[12h])) by (className,provider)
+            / count(sum_over_time(tink_agent_login_total{action="login", market="BE", provider_type!="test"}[12h])) by (className,provider) > 0.9)
       for: 15m
       labels:
         severity: urgent
