--- a/.charts/tink-backend-aggregation-agents/templates/fi/alerts.yaml
+++ b/.charts/tink-backend-aggregation-agents/templates/fi/alerts.yaml
@@ -10,11 +10,11 @@ spec:
     # All errors alerts
     #-------------------------------------------------------------------------------------------------------------------
     # Authentication alerts
-    - alert: AuthenticationErrorRateOver80%FI
+    - alert: AuthenticationErrorRateOver90%FI
       expr: |
-        # Failed logins over 80%
-        (count(sum_over_time(tink_agent_login_total{action="login", outcome="completed", market="FI", provider_type!="test"}[1h])) by (className,provider)
-            / count(sum_over_time(tink_agent_login_total{action="login", market="FI", provider_type!="test"}[1h])) by (className,provider) < 0.2)
+        # Failed logins over 90%
+        (count(sum_over_time(tink_agent_login_total{action="login", outcome=~"cancelled|cancelled_due_to_third_party_app_timeout|unavailable|failed", market="FI", provider_type!="test"}[1h])) by (className,provider)
+            / count(sum_over_time(tink_agent_login_total{action="login", market="FI", provider_type!="test"}[1h])) by (className,provider) > 0.9)
         # At least this many attempts.
             and count(sum_over_time(tink_agent_login_total{action="login", market="FI", provider_type!="test"}[1h])) by (className,provider) > 3
       for: 15m
@@ -25,14 +25,14 @@ spec:
       annotations:
         description: {{ .Values.kibanaLink }}
           {{ .Values.grafanaLink }}
-        summary: Authentication failures is over 80% (<{ $value }>) for the last 1h.
+        summary: Authentication failures is over 90% (<{ $value }>) for the last 1h.
         tags: {{ .Values.tags }}
 
     - alert: LongTermAuthenticationErrorRateOver90%FI
       expr: |
         # Failed logins over 90%
-        (count(sum_over_time(tink_agent_login_total{action="login", outcome="completed", market="FI", provider_type!="test"}[12h])) by (className,provider)
-            / count(sum_over_time(tink_agent_login_total{action="login", market="FI", provider_type!="test"}[12h])) by (className,provider) < 0.1)
+        (count(sum_over_time(tink_agent_login_total{action="login", outcome=~"cancelled|cancelled_due_to_third_party_app_timeout|unavailable|failed", market="FI", provider_type!="test"}[12h])) by (className,provider)
+            / count(sum_over_time(tink_agent_login_total{action="login", market="FI", provider_type!="test"}[12h])) by (className,provider) > 0.9)
       for: 15m
       labels:
         severity: urgent
