--- a/.charts/tink-backend-aggregation-agents/templates/fi/alerts.yaml
+++ b/.charts/tink-backend-aggregation-agents/templates/fi/alerts.yaml
@@ -21,7 +21,7 @@ spec:
       labels:
         severity: urgent
         priority: P1
-        who: integration-minions
+        who: integration-teletubbies
       annotations:
         description: {{ .Values.kibanaLink }}
           {{ .Values.grafanaLink }}
@@ -37,7 +37,7 @@ spec:
       labels:
         severity: urgent
         priority: P1
-        who: integration-minions
+        who: integration-teletubbies
       annotations:
         description: {{ .Values.kibanaLink12h }}
           {{ .Values.grafanaLink }}
@@ -53,7 +53,7 @@ spec:
       for: 15m
       labels:
         severity: urgent
-        who: integration-minions
+        who: integration-teletubbies
       annotations:
         description: {{ .Values.kibanaLink }}
           {{ .Values.grafanaLink }}
@@ -75,7 +75,7 @@ spec:
       labels:
         severity: urgent
         priority: P2
-        who: integration-minions
+        who: integration-teletubbies
       annotations:
         description: {{ .Values.kibanaLink }}
           {{ .Values.grafanaLink }}
@@ -93,7 +93,7 @@ spec:
       labels:
         severity: urgent
         priority: P2
-        who: integration-minions
+        who: integration-teletubbies
       annotations:
         description: {{ .Values.kibanaLink12h }}
           {{ .Values.grafanaLink }}
@@ -109,7 +109,7 @@ spec:
       for: 15m
       labels:
         severity: urgent
-        who: integration-minions
+        who: integration-teletubbies
       annotations:
         description: {{ .Values.kibanaLink }}
           {{ .Values.grafanaLink }}
@@ -132,7 +132,7 @@ spec:
       labels:
         severity: urgent
         priority: P2
-        who: integration-minions
+        who: integration-teletubbies
       annotations:
         description: {{ .Values.kibanaLink4h }}
           {{ .Values.grafanaLink }}
@@ -151,7 +151,7 @@ spec:
       labels:
         severity: urgent
         priority: P2
-        who: integration-minions
+        who: integration-teletubbies
       annotations:
         description: {{ .Values.kibanaLink4h }}
           {{ .Values.grafanaLink }}
@@ -171,7 +171,7 @@ spec:
       labels:
         severity: urgent
         priority: P2
-        who: integration-minions
+        who: integration-teletubbies
       annotations:
         description: {{ .Values.kibanaLink12h }}
           {{ .Values.grafanaLink }}
@@ -189,7 +189,7 @@ spec:
       for: 15m
       labels:
         severity: urgent
-        who: integration-minions
+        who: integration-teletubbies
       annotations:
         description: {{ .Values.kibanaLink4h }}
           {{ .Values.grafanaLink }}
@@ -204,7 +204,7 @@ spec:
       for: 15m
       labels:
         severity: urgent
-        who: integration-minions
+        who: integration-teletubbies
       annotations:
         description: {{ .Values.kibanaLink12h }}
           {{ .Values.grafanaLink }}
@@ -228,7 +228,7 @@ spec:
       labels:
         severity: urgent
         priority: P2
-        who: integration-minions
+        who: integration-teletubbies
       annotations:
         description: {{ .Values.kibanaLink4h }}
           {{ .Values.grafanaLink }}
@@ -247,7 +247,7 @@ spec:
       labels:
         severity: urgent
         priority: P2
-        who: integration-minions
+        who: integration-teletubbies
       annotations:
         description: {{ .Values.kibanaLink12h }}
           {{ .Values.grafanaLink }}
