--- a/src/integration/lib/src/main/java/se/tink/backend/aggregation/agents/contexts/agent/BUILD
+++ b/src/integration/lib/src/main/java/se/tink/backend/aggregation/agents/contexts/agent/BUILD
@@ -7,6 +7,7 @@ java_library(
     ],
     deps = [
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/agents/contexts",
+        "//src/integration/lib/src/main/java/se/tink/backend/aggregation/agents/summary/refresh",
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/api",
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/configuration/agentsservice",
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/eidasidentity/identity",
