--- a/src/integration/lib/src/test/java/se/tink/backend/aggregation/agents/framework/context/BUILD
+++ b/src/integration/lib/src/test/java/se/tink/backend/aggregation/agents/framework/context/BUILD
@@ -9,6 +9,7 @@ java_library(
         "//src/integration/identity_data",
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/agents/contexts",
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/agents/contexts/agent",
+        "//src/integration/lib/src/main/java/se/tink/backend/aggregation/agents/summary/refresh",
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/api",
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/eidasidentity",
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/logmasker",
