--- a/src/integration/lib/src/main/java/se/tink/backend/aggregation/nxgen/http/filter/filters/BUILD
+++ b/src/integration/lib/src/main/java/se/tink/backend/aggregation/nxgen/http/filter/filters/BUILD
@@ -16,6 +16,7 @@ java_library(
         "//third_party:com_sun_jersey_jersey_client",
         "//third_party:com_sun_jersey_jersey_core",
         "//third_party:commons_io_commons_io",
+        "//third_party:lombok_libs",
         "//third_party:org_apache_commons_commons_lang3",
         "//third_party:org_apache_httpcomponents_httpcore",
         "//third_party:org_slf4j_slf4j_api",
