--- a/src/libraries/field/src/main/java/se/tink/libraries/field/rpc/BUILD
+++ b/src/libraries/field/src/main/java/se/tink/libraries/field/rpc/BUILD
@@ -3,6 +3,7 @@ java_library(
     srcs = glob(["*.java"]),
     visibility = ["//visibility:public"],
     deps = [
+        "//third_party:lombok_libs",
         "@aggregation//:com_fasterxml_jackson_core_jackson_annotations",
         "@aggregation//:com_google_guava_guava",
         "@aggregation//:io_swagger_swagger_annotations",
