--- a/src/integration/lib/src/main/java/se/tink/backend/aggregation/agents/utils/supplementalfields/BUILD
+++ b/src/integration/lib/src/main/java/se/tink/backend/aggregation/agents/utils/supplementalfields/BUILD
@@ -10,7 +10,9 @@ java_library(
         "//src/libraries/i18n",
         "//src/libraries/serialization",
         "//third_party:com_google_guava_guava",
+        "//third_party:javax_validation_validation_api",
         "//third_party:lombok_libs",
+        "//third_party:org_apache_commons_commons_collections4",
         "//third_party:org_apache_commons_commons_lang3",
         "//third_party:org_slf4j_slf4j_api",
         "@aggregation//:com_fasterxml_jackson_core_jackson_annotations",
