test(sdktemplates): add tests for templates library
[ITE-2731]

--- a/src/integration/lib/src/test/java/se/tink/backend/aggregation/agents/utils/supplementalfields/BUILD
+++ b/src/integration/lib/src/test/java/se/tink/backend/aggregation/agents/utils/supplementalfields/BUILD
@@ -2,7 +2,7 @@ load("//tools/bzl:junit.bzl", "junit_test")
 
 junit_test(
     name = "supplementalfields",
-    srcs = glob(["*.java"]),
+    srcs = glob(["**/*.java"]),
     data = [],
     visibility = ["//visibility:public"],
     deps = [
