feat(dk/identitydata): add verification of cpr
adding static boolean method that checks if the string is a cpr

--- a/src/integration/identity_data/BUILD
+++ b/src/integration/identity_data/BUILD
@@ -5,6 +5,7 @@ java_library(
     srcs = glob(["src/main/**/*.java"]),
     visibility = ["//visibility:public"],
     deps = [
+        "//third_party:org_apache_commons_commons_lang3",
         "//third_party:org_slf4j_slf4j_api",
         "@aggregation//:com_fasterxml_jackson_core_jackson_annotations",
         "@aggregation//:com_fasterxml_jackson_core_jackson_databind",
