--- a/src/integration/agents/src/main/java/se/tink/backend/aggregation/agents/nxgen/serviceproviders/openbanking/bankverlag/BUILD
+++ b/src/integration/agents/src/main/java/se/tink/backend/aggregation/agents/nxgen/serviceproviders/openbanking/bankverlag/BUILD
@@ -35,6 +35,7 @@ java_library(
         "//src/libraries/i18n",
         "//third_party:com_google_inject_guice",
         "//third_party:com_sun_jersey_jersey_core",
+        "//third_party:commons_io_commons_io",
         "//third_party:lombok_libs",
         "//third_party:org_apache_commons_commons_lang",
         "//third_party:org_apache_commons_commons_lang3",
