fix(chart): or logic to work with helm 3.6.0

--- a/.charts/tink-backend-aggregation/templates/deployment.yaml
+++ b/.charts/tink-backend-aggregation/templates/deployment.yaml
@@ -375,7 +375,7 @@ spec:
           httpGet:
             # This is named start as this is emulating a startupProbe which will not be ready until
             # we upgrade to k8s 1.17+
-            {{- if  (eq .Values.Environment "development") or $startupProbeEnabled }}
+            {{- if or (eq .Values.Environment "development") ($startupProbeEnabled) }}
             # No need to start external dependencies when running in local minikube
             path: /aggregation/ping
             {{- else }}
