feat(storage): new interface to monitor storage insertions
A new interface to allow consumers to subscribe on insertions into a storage.

--- a/src/libraries/agent-storage/BUILD
+++ b/src/libraries/agent-storage/BUILD
@@ -4,6 +4,7 @@ java_library(
     visibility = ["//visibility:public"],
     deps = [
         "//src/libraries/serialization",
+        "//third_party:org_apache_commons_commons_lang3",
         "//third_party:org_slf4j_slf4j_api",
         "@aggregation//:com_fasterxml_jackson_core_jackson_core",
         "@aggregation//:com_google_guava_guava",
