--- a/src/integration/lib/src/main/java/se/tink/backend/aggregation/nxgen/agents/BUILD
+++ b/src/integration/lib/src/main/java/se/tink/backend/aggregation/nxgen/agents/BUILD
@@ -31,6 +31,7 @@ java_library(
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/nxgen/http",
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/nxgen/http/client",
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/nxgen/http/handler",
+        "//src/integration/lib/src/main/java/se/tink/backend/aggregation/nxgen/http_api_client",
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/nxgen/instrumentation",
         "//src/integration/models",
         "//src/integration/transfer:rpc",
@@ -38,6 +39,7 @@ java_library(
         "//src/libraries/credentials-persistence",
         "//src/libraries/date",
         "//src/libraries/i18n",
+        "//src/tink_backend_libs:aggregation_agent_api_client",
         "//third_party:com_fasterxml_jackson_core_jackson_core",
         "//third_party:com_fasterxml_jackson_core_jackson_databind",
         "//third_party:com_google_guava_guava",
