--- a/src/integration/agents/src/test/java/se/tink/backend/aggregation/agents/nxgen/se/openbanking/skandia/wiremock/resources/configuration.yml
+++ b/src/integration/agents/src/test/java/se/tink/backend/aggregation/agents/nxgen/se/openbanking/skandia/wiremock/resources/configuration.yml
@@ -11,3 +11,5 @@ agentsServiceConfiguration:
         clientId: dummyClient
         clientSecret: dummySecret
         redirectUrl: https://127.0.0.1:7357/api/v1/thirdparty/callback
+        scopes:
+          - AIS
