feat(HttpApiClient): Populate variable store with secrets variables

--- a/src/integration/lib/src/main/java/se/tink/backend/aggregation/nxgen/http_api_client/BUILD
+++ b/src/integration/lib/src/main/java/se/tink/backend/aggregation/nxgen/http_api_client/BUILD
@@ -7,6 +7,7 @@ java_library(
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/configuration/eidas/proxy",
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/eidasidentity/identity",
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/logmasker",
+        "//src/integration/lib/src/main/java/se/tink/backend/aggregation/nxgen/controllers/configuration",
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/nxgen/http_api_client/variable_detection/storage",
         "//src/libraries/agent-storage",
         "//src/tink_backend_libs:aggregation_agent_api_client",
