feat(AggregationService): Switch to G1 garbage collector in staging
https://docs.oracle.com/javase/9/gctuning/garbage-first-garbage-collector.htm#JSGCT-GUID-082C967F-2DAC-4B59-8A81-0CEC6EEB9016

--- a/.charts/tink-backend-aggregation/templates/deployment.yaml
+++ b/.charts/tink-backend-aggregation/templates/deployment.yaml
@@ -333,6 +333,9 @@ spec:
         - "-XX:-OmitStackTraceInFastThrow"
         - "-Dnetworkaddress.cache.ttl=60"
         - "-XX:+ExitOnOutOfMemoryError"
+        {{- if .Values.useG1gc }}
+        - "-XX:+UseG1GC"
+        {{- end }}
         - "/usr/share/tink-backend-aggregation/aggregation_service.jar"
         - "server"
         - "/etc/tink/config.yml"
