feat(as): Enabled transactionsRefreshScope feature flag on staging

--- a/.charts/tink-backend-aggregation/values/aggregation-staging.yaml
+++ b/.charts/tink-backend-aggregation/values/aggregation-staging.yaml
@@ -75,6 +75,7 @@ featureFlags:
   allowRefreshRegardlessOfRestrictions: true
   supportIndividualAccountsRefresh: true
   useAccountSegmentRestriction: true
+  transactionsRefreshScope: true
 
 providerConfigurationServiceConfiguration:
   enabled: true
