fix(as): Used Unleash instead of agents-config for feature flag

--- a/src/integration/agents/src/main/java/se/tink/backend/aggregation/agents/nxgen/no/banks/dnbbankid/BUILD
+++ b/src/integration/agents/src/main/java/se/tink/backend/aggregation/agents/nxgen/no/banks/dnbbankid/BUILD
@@ -49,5 +49,6 @@ java_library(
         "@aggregation//:com_google_guava_guava",
         "@selenium//:org_seleniumhq_selenium_selenium_api",
         "@tink_backend//src/libraries/account_identifier",
+        "@tink_backend//src/libraries/unleash",
     ],
 )
