feat(aggregation): utilize new metrics library to expose jetty metrics

--- a/src/aggregation/service/BUILD
+++ b/src/aggregation/service/BUILD
@@ -29,11 +29,14 @@ java_library(
         "//third_party:com_google_inject_guice",
         "//third_party:io_dropwizard_dropwizard_configuration",
         "//third_party:io_dropwizard_dropwizard_core",
+        "//third_party:io_prometheus_simpleclient",
+        "//third_party:io_prometheus_simpleclient_jetty",
         "//third_party:org_slf4j_slf4j_api",
         "//third_party/dropwizard",
         "@aggregation//:com_fasterxml_jackson_datatype_jackson_datatype_jsr310",
         "@aggregation//:com_google_guava_guava",
         "@aggregation//:com_netflix_governator_governator",
+        "@tink_backend//src/libraries/metrics/core/src/main/java/se/tink/libraries/metrics/prometheus",
         "@tink_backend//src/libraries/unleash",
     ],
 )
