--- a/src/aggregation/service/src/test/java/se/tink/backend/aggregation/lifecycle/BUILD
+++ b/src/aggregation/service/src/test/java/se/tink/backend/aggregation/lifecycle/BUILD
@@ -24,9 +24,11 @@ junit_test(
         "//third_party:io_dropwizard_dropwizard_jetty",
         "//third_party:io_dropwizard_dropwizard_logging",
         "//third_party:io_dropwizard_dropwizard_metrics",
+        "//third_party:io_prometheus_simpleclient",
         "//third_party:javax_validation_validation_api",
         "//third_party:jetty_server9",
         "//third_party:org_mockito_mockito_core",
+        "@tink_backend//src/libraries/metrics/core/src/main/java/se/tink/libraries/metrics/prometheus",
         "@tink_backend//src/libraries/metrics/core/src/main/java/se/tink/libraries/metrics/registry",
         "@tink_backend//src/libraries/unleash",
     ],
